<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MusicalSketches!</string>
    <string name="app_name">ExplodingFlowers</string>
    <string name="eigth_note">Eigth note icon</string>
    <string name="quarter_note">Quarter note icon</string>
    <string name="half_note">Half note icon</string>
    <string name="more_notes_icon">More notes icon</string>
    <string name="rests">Rests</string>
    <string name="record_icon">Record Icon</string>
    <string name="music_score">Musical score</string>
    <string name="dynamic_default">mp</string>
    <string name="slurs_button">Slurs Button</string>
    <string name="sharp_button">Sharp Button</string>
    <string name="natural_button">Natural Button</string>
    <string name="flat_button">Flat Button</string>
    

</resources>
